--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = ccfg_loop_scrape.settings
+default = ccfg_scrape.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = ccfg_loop_scrape
+project = ccfg_scrape
